<resources>
    <string name="app_name">Student App</string>
    <string name="todo">TODO</string>
    <string name="checklisticon">checklisticon</string>
    <string name="background">background</string>
    <string name="pencilicon">pencilicon</string>
    <string name="plusicon">plusicon</string>
    <string name="penicon">TODO</string>
    <string name="triicon">TODO</string>
    <string name="cubeicon">cubeicon</string>
    <string name="student_app">Student App</string>
    <string name="titletext">A handy and user-friendly app for students</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="signup_background">Signup_background</string>
    <string name="sign_in">sign in</string>
    <string name="firstnameh">First Name:</string>
    <string name="firstname">hint</string>
    <string name="lastnameh">Last Name:</string>
    <string name="emailh">Email:</string>
    <string name="passwordh">Password:</string>
    <string name="confirmpasswordh">Confirm Password:</string>
    <string name="backgroundlogin">background</string>
    <string name="signinhead">Sign In</string>
    <string name="signuphead">Sign Up</string>
    <string name="lsignuph">Sign Up</string>
    <string name="lsigninh">Sign In</string>
    <string name="lemailh">Email:</string>
    <string name="lpassword">Password</string>
    <string name="lpasswordh">Password:</string>
    <string name="llogin">Log In</string>
    <string name="backgroundportal">backgroundportal</string>
    <string name="username">TextView</string>
    <string name="usernameh">Name:</string>
    <string name="name">John Doe</string>
    <string name="idh">ID:</string>
    <string name="classid">1710</string>
    <string name="standardclassh">Class:</string>
    <string name="standardclass">9</string>
    <string name="image">image</string>
    <string name="paymenti">payment</string>
    <string name="attendancei">attendancei</string>
    <string name="resulti">resulti</string>
    <string name="noticei">noticei</string>
<!--    <string name="attendance">Attendance</string>-->
<!--    <string name="payment">Payment</string>-->
    <string name="notice">Notice</string>
    <string name="student_portal">Student Portal</string>
    <string name="result">Result</string>
    <string name="first_term">First Term</string>
    <string name="seocnd_term">Seocnd Term</string>
    <string name="third_term">Third Term</string>
    <string name="_90">90%</string>
    <string name="_80">80%</string>
    <string name="_95">95%</string>
    <string name="noticebackground">noticebackground</string>
    <string name="noticepost">TextView</string>
    <string name="textview">TextView</string>
    <string name="lorem_i">Lorem i</string>
    <string name="lorem_ipsum_or_lipsum_as_it_is_sometimes_known_is_dummy_text_used_in_layin">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in layin</string>
    <string name="lorem_ipsum_or_lipsum_as_it_is_sometimes_known">Lorem ipsum, or lipsum as it is sometimes known,</string>
    <string name="notice_1">Notice 1</string>
    <string name="notice_2">Notice 2</string>
    <string name="notice_3">Notice 3</string>
    <string name="notice_4">Notice 4</string>
    <string name="notice_5">Notice 5</string>
    <string name="payment">Payment</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="attendance">Attendance</string>
</resources>